Fixed whitespace issue with preformatted text!

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -2,7 +2,7 @@
 
 @media screen and (max-width: 650px) {
     div.main-portfolio-title pre {
-        font-size: 8px;
+        font-size: 3px;
     }
     div.card {
         display: block;
@@ -34,8 +34,7 @@
 
 .main-portfolio-title pre {
     font-family: 'pixel';
-    font-size: 11px;
-    font-weight: bold;
+    font-size: 4px;
 }
 
 .main-portfolio-link {
